pigeon/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    ellipsis-drive: api
spec:
  replicas: 1
  selector:
    matchLabels:
      ellipsis-drive: api
  template:
    metadata:
      labels:
        ellipsis-drive: api
    spec:
      serviceAccountName: s3-access-sa
      containers:
      - name: api
        image: ghcr.io/ellipsis-drive/api:latest
        resources:
          requests:
            cpu: 1
        ports:
          - containerPort: 7556
        volumeMounts:
          - name: etmpfs
            mountPath: /mnt/etmpfs
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      volumes:
        - name: etmpfs
          persistentVolumeClaim:
            claimName: etmpfs
